# Charlotte-Transit-Safety-Project

./: ADA_Parking_Spaces.csv  ADA_Signals.csv  CMPD_Crime_Clustering.py  Development_EDA.py  FirstFile.py  README.md  TDI_Polys_New_5117189631687471998.csv  Transit_Station_Areas.csv  Transit_Station_Development_Projects.csv  cmpd_cleaning.ipynb  cmpd_weather_link.ipynb  converter_To_GeoJson.ipynb  eda.ipynb  main.py  pyproject.toml  station_radius.ipynb
Data/: ADA_Parking_Spaces.csv  Difficult_Development_Areas.csv  LYNX_Blue_Line_Stations.csv  LYNX_Gold_Line_Stops.csv  Schools_(points).geojson  TDI_Polys_New_5117189631687471998.csv  Transit_Station_Development_Projects.geojson  Transit_Station_Development_Projects_Complete.csv  stationINFO.geojson  station_walksheds.geojson
HMIS.Data/: Domestic Violence.csv  FY 24.csv  Sheet 1.csv  Veterans.csv
