[project]
name = "dtsc4301-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "openai>=2.15.0",
    "osmnx>=2.0.7",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]
